# Unidirectional-Linked-List-Practice

./: .gitignore  CMakeLists.txt  Makefile  algo.c  algo.h  list.c  list.h  main.c  test.h
